--- a/src/sass/page/_home-default.scss
+++ b/src/sass/page/_home-default.scss
@@ -658,7 +658,7 @@
 		width: 100%;
 		height: 500px;
 		content: "";
-		background: url(../../images/event/bg.jpg) no-repeat center center;
+		background: url(../../images/wpp.png) no-repeat center center;
 		z-index: -1;
 	}
 	&:after{
