--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -5376,7 +5376,7 @@ wpo-hero-slider-s3
   -o-appearance: none;
   appearance: none;
   -moz-appearance: none;
-  background: transparent url(../../images/select-icon2.png) no-repeat calc(100% - 15px) center;
+  background: transparent url(../../src/images/wpp6\2.png) no-repeat calc(100% - 15px) center;
   position: relative;
 }
 .wpo-contact-section .wpo-contact-section-wrapper .wpo-contact-form-area .select.last {
@@ -5405,7 +5405,7 @@ wpo-hero-slider-s3
   width: 100%;
   height: 500px;
   content: "";
-  background: url(../../images/event/bg.jpg) no-repeat center center;
+  background: url(../../src/images/wpp6\ 2.png) no-repeat center center;
   z-index: -1;
 }
 .wpo-event-section:after {
@@ -6185,7 +6185,7 @@ wpo-hero-slider-s3
   width: 100%;
   height: 500px;
   content: "";
-  background: url(../../images/pricing/bg.jpg) no-repeat center center;
+  background: url(../../src/images/wpp6\ 2.png) no-repeat center center;
   z-index: -1;
 }
 .wpo-pricing-section:after,
